test/libsolidity/syntaxTests/modifiers/modifier_without_underscore.sol
contract test {
    modifier m() {}
}
// ----
// SyntaxError: Modifier body does not contain '_'.
